# dual-stream

./: .gitignore  Makefile  README.md  __init__.py  agent.py  pyproject.toml  quickstart.py
analysis/: plot_cliff.py  token_overhead.py  utils.py  verifier_rejection_rate.py  verify_paper_numbers.py
backends/: __init__.py
benchmarks/: base.py
benchmarks/appworld/: README.md  __init__.py  harness.py  run.py
benchmarks/synthetic/: harness.py  run.py
benchmarks/tau_bench/: README.md  __init__.py  harness.py  run.py
benchmarks/webarena/: README.md  __init__.py  harness.py  run.py
compressor/: __init__.py  sliding_window.py
context/: __init__.py  assembler.py  goal_stream.py  obs_stream.py
dual_stream/: __init__.py  agent.py  quickstart.py
dual_stream/backends/: __init__.py  openai.py
dual_stream/compressor/: __init__.py  sliding_window.py
dual_stream/context/: __init__.py  assembler.py  goal_stream.py  obs_stream.py
dual_stream/verifier/: __init__.py  checks.py  verifier.py
experiments/: config.py  run_sweep.py
experiments/ablations/: obs_budget_sweep.py  verifier_off.py
experiments/baselines/: __init__.py  common.py  (+2 more)
paper/: main.tex
src/: __init__.py  agent.py  core.py  quickstart.py
tests/: conftest.py  test_agent_loop.py  test_analysis.py  test_assembler.py  test_baselines.py  test_benchmarks.py  test_compressor.py  test_config.py  test_goal_stream.py  test_obs_stream.py  test_openai_backend.py  test_paper_numbers.py  test_run_sweep.py  test_synthetic.py  test_verifier.py
verifier/: __init__.py  checks.py  verifier.py
(+12 files in other folders)
